--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,8 +7,54 @@
 a {
   color: inherit;
 }
-
+body {
+  background: #eee;
+}
 img,
 video {
   display: block;
+  width: 28px;
+  height: 28px;
+}
+.navigationRail {
+  display: flex;
+  width: 200px;
+  padding: 50px 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
+  background: #fff;
+  box-shadow: 2px 0px 6px 0px rgba(0, 0, 0, 0.25);
+}
+.text {
+  text-align: center;
+  font-family: Roboto;
+  font-size: 22px;
+  font-weight: 400;
+}
+.link1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  color: #754ff6;
+}
+.navigation {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 40px;
+  align-self: stretch;
+}
+.link2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  color: #e5807c;
 }
